# robomaster_mujoco

./: README.md  requirements.txt
ffmpeg_encoder_decoder/: CMakeLists.txt  README.md
ffmpeg_encoder_decoder/.github/workflows/: ci.yaml
ffmpeg_encoder_decoder/doc/: encoder_decoder.dia
ffmpeg_encoder_decoder/include/ffmpeg_encoder_decoder/: decoder.hpp  encoder.hpp  pts_map.hpp  utils.hpp
ffmpeg_encoder_decoder/src/: decoder.cpp  encoder.cpp  utils.cpp
ffmpeg_encoder_decoder/test/: encoder_decoder_test.cpp  encoder_decoder_tester.cpp  encoder_decoder_tester.hpp
mujoco_rm_ws/: README.md
mujoco_rm_ws/dae_files/: mrRM copy.urdf  mrRM.urdf  mrRM_GyroSensor_vis_1.dae
mujoco_rm_ws/dae_files/accelerometer/: mrRM_Accelerometer_vis_1.dae
mujoco_rm_ws/ros2/: MUJOCO_LOG.TXT  load_env.py
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/config/: servos.yaml  teleop_twist_joy.yaml  xbox_joy_config_mujoco.yaml  xbox_piloting.yaml
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/launch/: joy_mujoco_cam.launch.py  teleop_linux.launch.xml
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/mujoco_rm_bringup/: joy_base_teleop_node.py  joy_servo_teleop_node.py  mujoco_sim_node.py  servo_config.py
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/resource/: mujoco_rm_bringup
mujoco_rm_ws/ros2/src/mujoco_rm_bringup/scripts/: joy_base_teleop  joy_servo_teleop  mujoco_sim
robomaster_ros_pkg/: .code-workspace.code-workspace
robomaster_ros_pkg/robomaster_ros/: package.xml  setup.py
(+190 files in other folders)
